#==============================================================================
# Copyright (c) 2011 Pavel Kartavyy <p.kartaviy@gmail.com>
#==============================================================================
CMAKE_MINIMUM_REQUIRED(VERSION 2.6.0)

PROJECT(VLIDAR)

MESSAGE(STATUS "Creating vlidar")

IF(NOT CMAKE_BUILD_TYPE)
    SET(CMAKE_BUILD_TYPE DEBUG)
ENDIF(NOT CMAKE_BUILD_TYPE)

# build libraries type
IF(NOT BUILD_SHARED_LIBS)
    SET(BUILD_SHARED_LIBS ON)
ENDIF(NOT BUILD_SHARED_LIBS)

# build directory config
SET(LIBRARY_OUTPUT_PATH ${CMAKE_CURRENT_BINARY_DIR})
SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_CURRENT_BINARY_DIR})

FIND_PACKAGE(OpenCV REQUIRED)
LINK_DIRECTORIES(${OpenCV_LINK_DIRECTORIES})
INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_DIR})

# work with cmake
SET(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake ${PROJECT_SOURCE_DIR})

INCLUDE(FindOS)
INCLUDE(FindURG)

IF(NOT URG_FOUND)
MESSAGE(FATAL_ERROR "Urg library not found. Please download it from hokuyo-aut.jp")
ENDIF(NOT URG_FOUND)

# add the include folder to the include path
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR})

SET(VLIDAR_SOURCE_DIR ${PROJECT_SOURCE_DIR}/vlidar)
SET(TESTS_SOURCE_DIR ${PROJECT_SOURCE_DIR}/tests)
ADD_SUBDIRECTORY(${VLIDAR_SOURCE_DIR})
ADD_SUBDIRECTORY(${TESTS_SOURCE_DIR})

SET(CDEFS "-DLIDAR")

SET(CMAKE_C_FLAGS  ${CDEFS})
SET(CMAKE_CXX_FLAGS ${CDEFS})

