MESSAGE(STATUS "CREATE EXECUTABLE VLIDAR")

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR})
INCLUDE_DIRECTORIES(${CMAKE_BINARY_DIR})
INCLUDE_DIRECTORIES(${PROJECT_BINARY_DIR})

#warning level
SET(CMAKE_CXX_WARNING_LEVEL 4)

FIND_PACKAGE(Qt4 COMPONENTS QtGui QtCore REQUIRED)
INCLUDE(${QT_USE_FILE})
MESSAGE(STATUS "Qt  " ${QT_USE_FILE})

#Fix me: there is now FindCmake for urg lidar library.
#FIND_PACKAGE(c_urg REQUIRED)
FIND_PATH(URG_INCLUDE_DIR NAMES urg/UrgDevice.h)
MESSAGE(STATUS "FOUND URG headers =" ${URG_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${URG_INCLUDE_DIR})

#Fix Me: Find library doesn't work for me with few names
#FIND_LIBRARY(URG_LIBRARIES NAMES c_urg c_urg_system c_urg_connection PATH /usr/local/lib)
FIND_LIBRARY(URG_LIBRARY NAMES c_urg PATH /usr/local/lib)
FIND_LIBRARY(URG_SYSTEM_LIBRARY NAMES c_urg_system PATH /usr/local/lib)
FIND_LIBRARY(URG_CONNECTION_LIBRARY NAMES c_urg_connection PATH /usr/local/lib)
SET(URG_LIBRARIES ${URG_SYSTEM_LIBRARY} ${URG_LIBRARY} ${URG_CONNECTION_LIBRARY})
MESSAGE(STATUS "Found URG_LIBRARIES ="${URG_LIBRARIES})

SET(SOURCE_FILES
    main.cpp
    v_lidar_motion_detector.cpp
    v_lidar_window.cpp)

SET(HEADER_FILES
    v_lidar_motion_detector.h)
SET(GUI_HEADER_FILES
    v_lidar_window.h)

SET(QT_FORM
    v_lidar_window.ui)

QT4_WRAP_CPP(MOC_SOURCES ${GUI_HEADER_FILES})
QT4_WRAP_UI(QT_FORMS_HEADERS ${QT_FORM})

ADD_EXECUTABLE(v_lidar ${HEADER_FILES} ${GUI_HEADER_FILES} ${QT_FORMS_HEADERS} ${SOURCE_FILES} ${MOC_SOURCES})
TARGET_LINK_LIBRARIES(v_lidar ${QT_LIBRARIES})
TARGET_LINK_LIBRARIES(v_lidar ${URG_LIBRARIES})
TARGET_LINK_LIBRARIES(v_lidar ${OpenCV_LIBS})
