MESSAGE(STATUS "CREATE EXECUTABLE VLIDAR")

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR})
INCLUDE_DIRECTORIES(${CMAKE_BINARY_DIR})
INCLUDE_DIRECTORIES(${PROJECT_BINARY_DIR})

SET(SOURCE_FILES
    main.cpp
    v_lidar_motion_detector.cpp
    v_lidar_window.cpp)

SET(HEADER_FILES
    v_lidar_motion_detector.h)
SET(GUI_HEADER_FILES
    v_lidar_window.h)

SET(QT_FORM
    v_lidar_window.ui)

QT4_WRAP_CPP(MOC_SOURCES ${GUI_HEADER_FILES})
QT4_WRAP_UI(QT_FORMS_HEADERS ${QT_FORM})

ADD_EXECUTABLE(v_lidar ${HEADER_FILES} ${GUI_HEADER_FILES} ${QT_FORMS_HEADERS} ${SOURCE_FILES} ${MOC_SOURCES})
TARGET_LINK_LIBRARIES(v_lidar ${QT_LIBRARIES})
TARGET_LINK_LIBRARIES(v_lidar ${URG_LIBRARIES})
TARGET_LINK_LIBRARIES(v_lidar ${OpenCV_LIBS})
TARGET_LINK_LIBRARIES(v_lidar ${QWT_LIBRARIES})
